5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4139/executions/1637_1053.log
== TEST (2019-04-04 21:42:19) 
-- CODE:
patrono=input("qual o animal do patrono de Harry Potter?:")

if (patrono == corsa):
	msg=("corsa")
else:
	msg=("nao")

print(msg ,"eh patrono do Harry poter")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (patrono == corsa):
NameError: name 'corsa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 21:44:05) 
-- CODE:
patrono=input("qual o animal do patrono de Harry Potter?:")

if (patrono == "corsa"):
	msg=("corsa")
else:
	msg=("nao")

print(msg ,"eh patrono do Harry poter")
-- OUTPUT:
nao eh patrono do Harry poter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 21:44:24) 
-- CODE:
patrono=input("qual o animal do patrono de Harry Potter?:")

if (patrono == "corsa"):
	msg=("corsa")
else:
	msg=("nao")

print(msg ,"eh patrono do Harry Poter")
-- OUTPUT:
nao eh patrono do Harry Poter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 21:44:43) 
-- CODE:
patrono=input("qual o animal do patrono de Harry Potter?:")

if (patrono == "corsa"):
	msg=("corsa")
else:
	msg=("nao")

print(msg ,"eh patrono do Harry Poter")
-- OUTPUT:
nao eh patrono do Harry Poter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 21:44:50) 
-- CODE:
patrono=input("qual o animal do patrono de Harry Potter?:")

if (patrono == "corsa"):
	msg=("corsa")
else:
	msg=("nao")

print(msg ,"eh patrono do Harry Poter")
-- OUTPUT:
nao eh patrono do Harry Poter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 21:45:07) 
-- CODE:
patrono=input("qual o animal do patrono de Harry Potter?:")

if (patrono == "corsa"):
	msg=("corsa")
else:
	msg=("nao")

print(msg ,"eh patrono do Harry Poter")
-- EXECUTION TIME:
0.2379
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
nao eh patrono do Harry Poter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
nao eh patrono do Harry Poter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 21:46:36) 
-- CODE:
patrono=input("qual o animal do patrono de Harry Potter?:")

if (patrono == "cervo"):
	msg=("cervo")
else:
	msg=("nao")

print(msg ,"eh patrono do Harry Poter")
-- OUTPUT:
cervo eh patrono do Harry Poter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 21:47:31) 
-- CODE:
patrono=input("qual o animal do patrono de Harry Potter?:")

if (patrono == "cervo"):
	msg=("cervo")
else:
	msg=("nao")

print(msg ,"eh patrono do Harry Potter")
-- EXECUTION TIME:
0.156856
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 21:47:50) 
-- CODE:
patrono=input("qual o animal do patrono de Harry Potter?:")

if (patrono == "cervo"):
	msg=("cervo")
else:
	msg=("nao")

print(msg ,"eh patrono do Harry Potter")
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 21:47:58) 
-- CODE:
patrono=input("qual o animal do patrono de Harry Potter?:")

if (patrono == "cervo"):
	msg=("cervo")
else:
	msg=("nao")

print(msg ,"eh patrono do Harry Potter")
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 21:51:32) 
-- CODE:
patrono=input("qual o animal do patrono de Harry Potter?:")

if (patrono == "cervo"):
	msg=("cervo")
else:
	msg=(patrono+" nao")

print(msg ,"eh patrono do Harry Potter")
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 21:51:42) 
-- CODE:
patrono=input("qual o animal do patrono de Harry Potter?:")

if (patrono == "cervo"):
	msg=("cervo")
else:
	msg=(patrono+" nao")

print(msg ,"eh patrono do Harry Potter")
-- EXECUTION TIME:
0.1572
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:35:02) 
-- CODE:
patrono=input("qual o animal do patrono de Harry Potter?:")

if (patrono == "cervo"):
	msg=("cervo")
else:
	msg=(patrono+" nao")

print(msg ,"eh patrono do Harry Potter")
-- EXECUTION TIME:
0.175037
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 12:13:03) 
-- CODE:
patrono=input("qual o animal do patrono de Harry Potter?:")

if (patrono == "cervo"):
	msg=("cervo")
else:
	msg=(patrono+" nao")

print(msg ,"eh patrono do Harry Potter")
-- EXECUTION TIME:
0.150507
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
